--- a/ARG/dockerfile
+++ b/ARG/dockerfile
@@ -1,3 +1,5 @@
 FROM almalinux:9
 ARG course="Devops" \
     duration = "120hrs"
+RUN echo "course:$course, duration:$duration"
+CMD ["sleep","100"]
