--- a/ARG/dockerfile
+++ b/ARG/dockerfile
@@ -1,5 +1,6 @@
-FROM almalinux:9
-ENV course="Devops" \
+ARG version
+FROM almalinux:${version}
+ARG course="Devops" \
     duration="120hrs"
 RUN echo "course:$course, duration:$duration"
 CMD ["sleep","100"]
