--- a/ARG/dockerfile
+++ b/ARG/dockerfile
@@ -1,7 +1,8 @@
-ARG version
-FROM almalinux:${version:-9}
+# ARG version
+# FROM almalinux:${version:-9}
+FROM almalinux:9
 ARG course="Devops" \
     duration="120hrs"
-ENV course=$course
-RUN echo "course:$course, duration:$duration, version:$version"
+# ENV course=$course
+RUN echo "course:$course, duration:$duration"
 CMD ["sleep","100"]
