--- a/ARG/dockerfile
+++ b/ARG/dockerfile
@@ -1,11 +1,12 @@
 # ARG version
 # FROM almalinux:${version:-9}
 FROM almalinux:9
-# ARG course="Devops" \
-#     duration="120hrs"
-ENV course="Devops" \
+ARG course="Devops" \
     duration="120hrs" \
     name="Hari"
+# ENV course="Devops" \
+#     duration="120hrs" \
+#     name="Hari"
 # ENV course=$course
 RUN echo "course:$course, duration:$duration, name:$name"
 CMD ["sleep","100"]
