--- a/ARG/dockerfile
+++ b/ARG/dockerfile
@@ -1,5 +1,5 @@
 ARG version
-FROM almalinux:${version}
+FROM almalinux:${version:-9}
 # FROM almalinux:9
 # ARG course="Devops" \
 #     duration="120hrs" \
